# ml_prod_final_project

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
conf/: config.yaml  configs.py
conf/monitoring/: alerts.yaml  prometheus.yaml
conf/monitoring/grafana/dashboards/: airflow-metrics.json  asr-qe-metrics.json
conf/monitoring/grafana/provisioning/datasources/: prometheus.yml
dags/: qe_pipeline.py
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/spark/: Dockerfile
jobs/: deploy_model.py  feature_extract.py  train_model.py  validate_model.py
scripts/: download_sample.py  download_voxpopuli.py  generate_ground_truth.py  generate_traffic.sh  setup_verification_data.py  start_docker.sh  test_end_to_end.sh  test_pipeline_e2e.sh
serving/: main.py  schemas.py
src/asr_qe/: config.py  validation.py
src/asr_qe/data/: __init__.py  loader.py
src/asr_qe/features/: acoustic.py  asr.py  interface.py
src/asr_qe/models/: __init__.py  loader.py  trainer.py
src/asr_qe/serving/: main.py
src/asr_qe/utils/: __init__.py  diagnostics.py  logging.py
tests/integration/: test_archive_task.py  test_dag_loading.py  test_docker_contract.py  test_training_pipeline.py
tests/unit/: test_config.py  test_data_loader.py  test_features.py  test_features_asr.py  test_jobs.py  test_loader.py  test_observability.py  test_serving.py  test_trainer.py  test_validation.py
